# hmpps-veracode-discovery

./: .gitignore  Dockerfile  README.md  dependabot.yml  globals.py  main.py  pyproject.toml  requirements.txt  veracode_discovery.py
.github/: dependabot.yml
.github/actions/cloud-platform-deploy/: action.yml
.github/actions/get-env-details/: action.yml
.github/workflows/: backup_repository.yml  build.yml  deploy.yml  deploy_to_env.yml  pipeline.yml  security_codeql_actions_scan.yml  security_codeql_python_scan.yml  security_snyk_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml  update_secrets.yml
classes/: service_catalogue.py  slack.py
helm_deploy/: values-dev.yaml  values-prod.yaml
helm_deploy/hmpps-veracode-discovery/: Chart.yaml  values.yaml
helm_deploy/hmpps-veracode-discovery/templates/: _discovery_cron_job_envs.tpl  discovery-cron-job.yaml
processes/: scheduled_jobs.py
utilities/: discovery.py
utils/: update_sc_scheduled_jobs.py
