[project]
name = "hmpps-veracode-discovery"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hmpps-sre-python-lib",
    "veracode-api-signing==26.5.0",
]

[tool.uv.sources]
hmpps-sre-python-lib = { url = "https://github.com/ministryofjustice/hmpps-sre-python-lib/releases/download/v1.2.5/hmpps_sre_python_lib-1.2.5-py3-none-any.whl" }
